# clf_perception_vision_msgs

./: .gitignore  CMakeLists.txt  package.xml
msg/: ExtendedObjects.msg  ExtendedPeople.msg  ExtendedPoseArray.msg
srv/: ClassifyGenderAgeImage.srv  DoIKnowThatPerson.srv  DoIKnowThatPersonImage.srv  GetFaceBB.srv  ImageToPose.srv  LearnPerson.srv  LearnPersonImage.srv  MoodOfPerson.srv  ToggleCFtldTrackingWithBB.srv
